--- a/client/less/grid.less
+++ b/client/less/grid.less
@@ -10,6 +10,7 @@
 		margin:5px;
 		display:inline-block;
 		overflow:hidden;
+		float:left;
 		
 		& > iframe{
 			float:left;
@@ -25,7 +26,7 @@
 				height:100%;
 				width:100%;
 				
-				.transition(opacity 0.5s);
+				.transition(opacity 0.4s);
 				
 				&:hover{
 					opacity:1;
